--- a/front/index.html
+++ b/front/index.html
@@ -7,8 +7,25 @@
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.css" rel="stylesheet"	>
 </head>
-<body>
-    
+<body onload="obterFilmes()">
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <table class="table table-striped table-hover text-center filmes">
+                    <thead>
+                        <tr>
+                            <th>Título</th>
+                            <th>Sinopse</th>
+                        </tr>
+                    </thead>                           
+                    <tbody>
+
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
