--- a/front/index.html
+++ b/front/index.html
@@ -11,6 +11,41 @@
     <div class="container mt-5">
         <div class="row justify-content-center">
             <div class="col-md-8">
+                <div class="alert d-none alert-danger alert-dismissible fade" role="alert">
+                    Preencha todos os campos!!
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="row justify-content-center">
+            <div class="col-md-8 col-lg-4">
+                <div class="form-floating mb-3">
+                    <input type="text" class="form-control" id="tituloInput" placeholder="">
+                    <label for="tituloInput">Título do Filme</label>
+                </div>
+            </div>
+
+            <div class="col-md-8 col-lg-4">
+                <div class="form-floating mb-3">                    
+                    <input type="text" class="form-control" id="sinopseInput" placeholder="">
+                    <label for="sinopseInput">Sinopse do Filme</label>
+                </div>
+            </div>
+
+        </div>
+        
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <button class="btn btn-outline-primary w-100" onclick="cadastrarFilme()">
+                    Cadastrar
+                </button>
+            </div>
+        </div>
+
+        <div class="row justify-content-center">
+            <div class="col-md-8">
                 <table class="table table-striped table-hover text-center filmes">
                     <thead>
                         <tr>
@@ -25,7 +60,14 @@
             </div>
         </div>
     </div>
+    
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
+    <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"></script>
+
     <script src="js/script.js"></script>
 </body>
 </html>
