--- a/front/index.html
+++ b/front/index.html
@@ -8,6 +8,112 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.css" rel="stylesheet"	>
 </head>
 <body onload="obterFilmes()">
+    <div class="modal fade" id="modalCadastro" 
+    aria-labelledby="modalCadastro" aria-hidden="true" >
+        <div class="modal-dialog">
+            <div class="modal-content">            
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5">
+                        Cadastro de Usuário
+                    </h1>
+                </div>
+                <div class="modal-body">
+                    <div class="row justify-content-center">
+                        <div class="col-md-12">
+                            <div class="form-floating mb-3">
+                                <input type="text" class="form-control" id="usuarioInput" placeholder="">
+                                <label for="usuarioInput">Usuário</label>
+                            </div>
+                        </div>
+            
+                        <div class="col-md-12">
+                            <div class="form-floating mb-3">                    
+                                <input type="text" class="form-control" id="senhaInput" placeholder="">
+                                <label for="senhaInput">Senha</label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <div class="col-md-12 mt-3">
+                        <div class="button">
+                            <div class="col-md-12">
+                                <button class="btn btn-outline-primary w-100" onclick="cadastrarUsuario()">
+                                    Cadastrar
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="modalLogin" 
+    aria-labelledby="modalLogin" aria-hidden="true" >
+        <div class="modal-dialog">
+            <div class="modal-content">            
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5">
+                        Login
+                    </h1>
+                </div>
+                <div class="modal-body">
+                    <div class="row justify-content-center">
+                        <div class="col-md-12">
+                            <div class="form-floating mb-3">
+                                <input type="text" class="form-control" id="loginUsuarioInput" placeholder="">
+                                <label for="loginUsuarioInput">Usuario</label>
+                            </div>
+                        </div>
+            
+                        <div class="col-md-12">
+                            <div class="form-floating mb-3">                    
+                                <input type="text" class="form-control" id="loginSenhaInput" placeholder="">
+                                <label for="loginSenhaInput">Senha</label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <div class="col-md-12 mt-3">
+                        <div class="button">
+                            <div class="col-md-12">
+                                <button class="btn btn-outline-primary w-100" onclick="loginUsuario()"><!--ainda tem que criar o loginUsuario() no frontend.js-->
+                                    Logar
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <nav class="navbar navbar-expand-md bg-light">
+                    <a href="#" class="navbar-brand" >Filmes</a>
+                    <button class="navbar-toggler"
+                    type="button" 
+                    data-bs-toggle="collapse"
+                    data-bs-target="#myNav"
+                    aria-controls="#myNav"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="myNav">
+                        <div class="navbar-nav ms-auto">
+                            <a class="nav-link active me-2" data-bs-toggle="modal" data-bs-target="#modalLogin" href="#">Login</a>
+                            <a class="nav-link active me-2" data-bs-toggle="modal" data-bs-target="#modalCadastro" href="/signup">Novo Usuário</a>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+        </div>
+    </div>
+
     <div class="container mt-5">
         <div class="row justify-content-center">
             <div class="col-md-8">
